Add restart button and result announcer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
   <link rel="stylesheet" href="./styles.css">
   <script src="./script.js" defer></script>
 </head>
-<body>
-  <div id="game-board">
 
-  </div>
+<body>
+  <div id="game-board"></div>
+  <button id="restart">Restart</button>
+  <h2 id="status"></h2>
 </body>
+
 </html>
